--- a/res/layout/profile_user.xml
+++ b/res/layout/profile_user.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <ListView
-        android:id="@+id/managerListView"
+        android:id="@+id/userListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </ListView>
