--- a/res/layout/list_item_item.xml
+++ b/res/layout/list_item_item.xml
@@ -1,52 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:padding="10dp" >
 
     <ImageView
         android:id="@+id/photoImageView"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp"
-        android:contentDescription="@string/invoice"/>
+        android:layout_centerVertical="true"
+        android:background="@drawable/ic_launcher"
+        android:contentDescription="@string/invoice" />
 
     <LinearLayout
-        android:layout_width="135dp"
-        android:layout_height="60dp"
-        android:orientation="vertical" >
-        
-         <TextView android:id="@+id/reportTextView"    
-            android:layout_width="wrap_content"  
-            android:layout_height="wrap_content"    
-            android:textColor="#FF000000"  
-            android:textSize="13sp" />  
-            
-        <TextView android:id="@+id/vendorTextView"    
-            android:layout_width="wrap_content"  
-            android:layout_height="wrap_content"    
-            android:textColor="#FF000000"  
-            android:textSize="22sp" />  
-            
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/photoImageView"
+        android:paddingLeft="10dp"
+        android:orientation="vertical" 
+        android:id="@+id/titleLayout" >
+
+        <TextView
+            android:id="@+id/reportTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FF000000"
+            android:textSize="13sp" />
+
+        <TextView
+            android:id="@+id/vendorTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FF000000"
+            android:textSize="22sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/titleLayout"
+        android:gravity="right"
         android:orientation="vertical" >
-        
-        <TextView android:id="@+id/categoryTextView"    
-            android:layout_width="wrap_content"  
-            android:layout_height="wrap_content"    
-            android:textColor="#FF000000"  
-            android:textSize="13sp" />  
-        <TextView android:id="@+id/amountTextView"    
-            android:layout_width="wrap_content"  
-            android:layout_height="wrap_content"    
-            android:textColor="#FF000000"  
-            android:textSize="22sp" />  
-            
+
+        <TextView
+            android:id="@+id/categoryTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FF000000"
+            android:textSize="13sp" />
+
+        <TextView
+            android:id="@+id/amountTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FF000000"
+            android:textSize="22sp" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
