--- a/res/layout/profile_category_dialog.xml
+++ b/res/layout/profile_category_dialog.xml
@@ -6,19 +6,22 @@
 
     <EditText
         android:id="@+id/nameEditText"
-        android:layout_width="240dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:ems="10"
         android:hint="@string/inputCategoryName" />
 
     <EditText
         android:id="@+id/limitEditText"
-        android:layout_width="240dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/nameEditText"
+        android:layout_alignRight="@+id/nameEditText"
         android:layout_below="@+id/nameEditText"
         android:layout_marginTop="25dp"
         android:ems="10"
