--- a/res/layout/profile_invite_dialog.xml
+++ b/res/layout/profile_invite_dialog.xml
@@ -6,11 +6,13 @@
 
     <EditText
         android:id="@+id/usernameEditText"
-        android:layout_width="240dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:ems="10"
         android:hint="@string/inputUserContact" />
 
