--- a/res/layout/report_edit.xml
+++ b/res/layout/report_edit.xml
@@ -18,6 +18,7 @@
         android:id="@+id/commentLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="?android:attr/buttonBarStyle"
         android:layout_below="@id/titleEditText" >
 
         <Button
@@ -25,6 +26,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            style="?android:attr/buttonBarButtonStyle"
             android:text="@string/addComment" />
 
 	    <Button
@@ -32,6 +34,7 @@
 	        android:layout_width="0dp"
 	        android:layout_height="wrap_content"
             android:layout_weight="1"
+            style="?android:attr/buttonBarButtonStyle"
 	        android:text="@string/checkComment" />
         
     </LinearLayout>
