--- a/res/layout/fragment_statistics.xml
+++ b/res/layout/fragment_statistics.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/list_background" >
 
     <LinearLayout
         android:layout_width="match_parent"
