--- a/res/layout/report_mine.xml
+++ b/res/layout/report_mine.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/mineBaseLayout" >
+    android:background="@color/list_background" >
 
     <classes.XListView
         android:id="@+id/mineListView"
