--- a/res/layout/tab_item.xml
+++ b/res/layout/tab_item.xml
@@ -1,11 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:id="@+id/textView"
-    android:textSize="12sp"
-    android:textColor="@color/tab_textview_color" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+    
+	<TextView
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_centerInParent="true"
+	    android:gravity="center"
+	    android:orientation="vertical"
+	    android:id="@+id/textView"
+	    android:textSize="12sp"
+	    android:textColor="@color/tab_textview_color" >
+	</TextView>
 
-</TextView>
+	<TextView
+	    android:id="@+id/shortBadgeTextView"
+	    android:layout_width="20dp"
+	    android:layout_height="20dp"
+		android:layout_alignTop="@+id/textView"
+		android:layout_alignRight="@+id/textView"
+		android:layout_marginRight="-10dp"
+		android:gravity="center"
+		android:textColor="@android:color/white"
+		android:background="@drawable/badge_short"
+		android:visibility="gone" />
+
+	<TextView
+	    android:id="@+id/longBadgeTextView"
+	    android:layout_width="40dp"
+	    android:layout_height="20dp"
+		android:layout_alignTop="@+id/textView"
+		android:layout_alignRight="@+id/textView"
+		android:layout_marginRight="-20dp"
+		android:gravity="center"
+		android:textColor="@android:color/white"
+		android:background="@drawable/badge_long"
+		android:visibility="gone" />
+	
+</RelativeLayout>
