--- a/res/layout/start_reset_password.xml
+++ b/res/layout/start_reset_password.xml
@@ -7,10 +7,10 @@
         <requestFocus />
 
     <Button
-        android:id="@+id/cancelButton"
+        android:id="@+id/rejectButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/confirmButton"
+        android:layout_alignBottom="@+id/agreeButton"
         android:layout_alignRight="@+id/confirmPasswordEditText"
         android:text="@string/cancel" />
 
@@ -37,7 +37,7 @@
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/confirmButton"
+        android:id="@+id/agreeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/confirmPasswordEditText"
