--- a/res/layout/profile_invited.xml
+++ b/res/layout/profile_invited.xml
@@ -13,7 +13,7 @@
         android:padding="10dp" />
 
     <Button
-        android:id="@+id/confirmButton"
+        android:id="@+id/agreeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -21,7 +21,7 @@
         android:text="@string/agree" />
 
     <Button
-        android:id="@+id/cancelButton"
+        android:id="@+id/rejectButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
