--- a/res/layout/report_edit.xml
+++ b/res/layout/report_edit.xml
@@ -105,7 +105,7 @@
         android:layout_alignParentBottom="true" >
 
         <Button
-            android:id="@+id/cancelButton"
+            android:id="@+id/rejectButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
