--- a/res/layout/start_sign_in.xml
+++ b/res/layout/start_sign_in.xml
@@ -40,7 +40,7 @@
         android:text="@string/forgotPassword" />
 
     <Button
-        android:id="@+id/confirmButton"
+        android:id="@+id/agreeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/passwordEditText"
@@ -49,11 +49,11 @@
         android:text="@string/confirm" />
 
     <Button
-        android:id="@+id/cancelButton"
+        android:id="@+id/rejectButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/confirmButton"
-        android:layout_alignBottom="@+id/confirmButton"
+        android:layout_alignBaseline="@+id/agreeButton"
+        android:layout_alignBottom="@+id/agreeButton"
         android:layout_alignRight="@+id/forgotTextView"
         android:text="@string/cancel" />
 
