--- a/res/layout/tab_item.xml
+++ b/res/layout/tab_item.xml
@@ -14,6 +14,17 @@
 	    android:textColor="@color/tab_textview_color" >
 	</TextView>
 
+	<ImageView
+	    android:id="@+id/tipImageView"
+	    android:layout_width="10dp"
+	    android:layout_height="10dp"
+		android:layout_alignTop="@+id/textView"
+		android:layout_alignRight="@+id/textView"
+		android:layout_marginTop="2dp"
+		android:contentDescription="@string/nullString"
+		android:background="@drawable/tip"
+		android:visibility="gone" />
+
 	<TextView
 	    android:id="@+id/shortBadgeTextView"
 	    android:layout_width="20dp"
