--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -5,5 +5,7 @@
     <!-- <color name="list_background">#ffff0000</color> -->
     <color name="list_item_selected">#ffff95c0</color>
     <color name="list_item_not_selected">#00000000</color>
+    <color name="list_item_approved">#ff3cb798</color>
+    <color name="list_item_prove_ahead">#ffff575b</color>
         
 </resources>
