--- a/res/layout/reim_edit_item.xml
+++ b/res/layout/reim_edit_item.xml
@@ -143,7 +143,7 @@
             android:text="@string/save" />
 
         <Button
-            android:id="@+id/rejectButton"
+            android:id="@+id/cancelButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/cancel" />
