--- a/res/layout/profile_feedback.xml
+++ b/res/layout/profile_feedback.xml
@@ -47,7 +47,7 @@
         android:text="@string/submit" />
 
     <Button
-        android:id="@+id/rejectButton"
+        android:id="@+id/cancelButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/cancel" />
