--- a/res/menu/add.xml
+++ b/res/menu/add.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
         android:id="@+id/action_add_item"
         android:title="@string/add"
-        app:showAsAction="always" >  
+        android:showAsAction="always" >  
     </item>
     
 </menu>
