--- a/res/layout/list_member.xml
+++ b/res/layout/list_member.xml
@@ -3,16 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:background="@drawable/list_item_color" >
+    android:background="@drawable/list_item_color"
+    android:padding="5dp" >
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:paddingTop="5dp"
-        android:paddingLeft="5dp"
-        android:paddingBottom="5dp"
-        android:paddingRight="5dp"
         android:scaleType="fitXY"
         android:contentDescription="@string/avatar" />
 
@@ -20,6 +17,7 @@
         android:id="@+id/nicknameTextView"
         android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dp" />
 
 </LinearLayout>
