--- a/res/layout/profile_user.xml
+++ b/res/layout/profile_user.xml
@@ -7,7 +7,8 @@
     <ListView
         android:id="@+id/userListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:listSelector="@android:color/transparent" >
     </ListView>
 
 </LinearLayout>
