--- a/res/layout/report_mine.xml
+++ b/res/layout/report_mine.xml
@@ -8,7 +8,8 @@
     <classes.XListView
         android:id="@+id/mineListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:cacheColorHint="#00000000"  >
     </classes.XListView>
 
     <Button
@@ -17,7 +18,7 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="75dp"
         android:background="@drawable/add_button" />
 
 </RelativeLayout>
