--- a/res/layout/start_sign_in.xml
+++ b/res/layout/start_sign_in.xml
@@ -7,11 +7,13 @@
 
     <EditText
         android:id="@+id/usernameEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="40dp"
         android:ems="10"
         android:hint="@string/inputUsername"
         android:inputType="text" />
@@ -25,7 +27,7 @@
         android:layout_alignLeft="@+id/usernameEditText"
         android:layout_alignRight="@+id/usernameEditText"
         android:layout_below="@+id/usernameEditText"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="25dp"
         android:ems="10"
         android:hint="@string/inputPassword"
         android:inputType="textPassword" />
@@ -36,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/passwordEditText"
         android:layout_below="@+id/passwordEditText"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="25dp"
         android:text="@string/forgotPassword" />
 
     <LinearLayout
