--- a/res/layout/reim_edit_item.xml
+++ b/res/layout/reim_edit_item.xml
@@ -56,6 +56,15 @@
                 android:contentDescription="@string/invoice"
                 android:scaleType="fitXY"
                 android:src="@drawable/splash_image" />
+
+            <TextView
+                android:id="@+id/paAmountTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/proveAheadCheckBox"
+                android:layout_below="@+id/proveAheadCheckBox"
+                android:text="@string/paAmount" />
+
         </RelativeLayout>
 
         <Button
