--- a/res/layout/reim_show_item.xml
+++ b/res/layout/reim_show_item.xml
@@ -50,6 +50,14 @@
                 android:scaleType="fitXY"
                 android:src="@drawable/splash_image" />
 
+            <TextView
+                android:id="@+id/paAmountTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/proveAheadCheckBox"
+                android:layout_below="@+id/proveAheadCheckBox"
+                android:text="@string/paAmount" />
+
         </RelativeLayout>
 
 	    <LinearLayout
