--- a/res/layout/reim_show_item.xml
+++ b/res/layout/reim_show_item.xml
@@ -65,6 +65,27 @@
 	        android:layout_height="wrap_content" >
             
 	        <TextView
+	            android:id="@+id/categoryPrompt"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="0.01"
+	            android:text="@string/category"
+	            android:textAppearance="?android:attr/textAppearanceLarge" />
+            
+	        <TextView
+	            android:id="@+id/categoryTextView"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="0.13"
+	            android:textAppearance="?android:attr/textAppearanceLarge" />         
+	        
+	    </LinearLayout>
+
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content" >
+            
+	        <TextView
 	            android:id="@+id/vendorPrompt"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
@@ -86,19 +107,19 @@
 	        android:layout_height="wrap_content" >
             
 	        <TextView
-	            android:id="@+id/categoryPrompt"
+	            android:id="@+id/locationPrompt"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:layout_weight="0.01"
-	            android:text="@string/category"
+	            android:text="@string/location"
 	            android:textAppearance="?android:attr/textAppearanceLarge" />
             
 	        <TextView
-	            android:id="@+id/categoryTextView"
+	            android:id="@+id/locationTextView"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:layout_weight="0.13"
-	            android:textAppearance="?android:attr/textAppearanceLarge" />         
+	            android:textAppearance="?android:attr/textAppearanceLarge" />            
 	        
 	    </LinearLayout>
 
