--- a/res/layout/start_register_by_email.xml
+++ b/res/layout/start_register_by_email.xml
@@ -13,8 +13,10 @@
         android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="@string/inputEmail"
-        android:inputType="textEmailAddress" >
-        <requestFocus />
+        android:inputType="textEmailAddress"
+        android:focusable="true" 
+        android:focusableInTouchMode="true">
+    	<requestFocus/>
     </EditText>
 
     <EditText
