--- a/res/layout/start_register_by_phone.xml
+++ b/res/layout/start_register_by_phone.xml
@@ -14,9 +14,10 @@
         android:layout_marginTop="40dp"
         android:ems="10"
         android:hint="@string/inputPhone"
-        android:inputType="text|phone" />
-        
-        <requestFocus />
+        android:inputType="text|phone"
+        android:focusable="true" 
+        android:focusableInTouchMode="true" />
+    <requestFocus />
 
     <EditText
         android:id="@+id/mobilePasswordEditText"
