--- a/res/layout/list_report.xml
+++ b/res/layout/list_report.xml
@@ -10,18 +10,24 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/countTextView"
+        android:gravity="left"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/statusTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:textColor="#FF000000"
             android:textSize="13sp" />
         
          <TextView android:id="@+id/titleTextView"    
             android:layout_width="wrap_content"  
             android:layout_height="wrap_content"    
+            android:ellipsize="end"
+            android:singleLine="true"
             android:textColor="#FF000000"  
             android:textSize="22sp" />  
             
@@ -30,7 +36,7 @@
     <TextView
         android:id="@+id/countTextView"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -38,14 +44,18 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/countTextView"
+        android:layout_alignParentRight="true"
         android:orientation="vertical" >
             
         <TextView android:id="@+id/dateTextView"    
             android:layout_width="wrap_content"  
             android:layout_height="wrap_content"
             android:layout_gravity="right" 
+            android:gravity="right"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:textColor="#FF000000"  
             android:textSize="13sp" />
 
@@ -54,6 +64,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
+            android:gravity="right"
+            android:paddingTop="5dp"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:textColor="#FF000000"
             android:textSize="22sp" />
     </LinearLayout>
