--- a/res/layout/report_edit.xml
+++ b/res/layout/report_edit.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:ems="10"
+        android:singleLine="true"
         android:hint="@string/inputReportTitle" />
 
     <LinearLayout
