--- a/res/layout/reim_filter.xml
+++ b/res/layout/reim_filter.xml
@@ -48,10 +48,10 @@
             android:text="@string/sortAmount" />
 
         <RadioButton
-            android:id="@+id/sortUpdateDateRadio"
+            android:id="@+id/sortConsumedDateRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sortUpdateDate" />
+            android:text="@string/sortConsumedDate" />
     </RadioGroup>
 
     <TextView
