--- a/res/layout/list_profile.xml
+++ b/res/layout/list_profile.xml
@@ -3,22 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:padding="10dp"
     android:background="@drawable/list_item_color" >
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:paddingTop="5dp"
-        android:paddingLeft="5dp"
-        android:paddingBottom="5dp"
-        android:paddingRight="5dp"
         android:scaleType="fitXY"
         android:contentDescription="@string/avatar" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:paddingLeft="10dp"
         android:orientation="vertical" >
 
         <TextView
@@ -29,7 +27,8 @@
         <TextView
             android:id="@+id/companyTextView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp" />
 
     </LinearLayout>
 
