--- a/res/layout/list_toggle.xml
+++ b/res/layout/list_toggle.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:padding="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:background="@drawable/list_item_color" >
 
     <TextView
