--- a/res/layout/profile.xml
+++ b/res/layout/profile.xml
@@ -1,7 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/profileListView" >    
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/list_background" >
 
-</ListView>
+	<ListView
+	    android:id="@+id/profileListView" 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+	    android:background="@android:color/white"
+	    android:descendantFocusability="beforeDescendants" />
+	    
+    <ListView
+        android:id="@+id/operationListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+	    android:background="@android:color/white"
+        android:listSelector="@drawable/list_item_color" />
+
+</LinearLayout>
