--- a/res/layout/profile_tag.xml
+++ b/res/layout/profile_tag.xml
@@ -6,7 +6,8 @@
     <ListView
         android:id="@+id/tagListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:listSelector="@drawable/list_item_color"  >
     </ListView>
 
     <TextView
