--- a/res/layout/list_comment.xml
+++ b/res/layout/list_comment.xml
@@ -14,7 +14,8 @@
             android:id="@+id/avatarImageView"
             android:layout_width="15dp"
             android:layout_height="15dp"
-            android:contentDescription="@string/avatar" />
+            android:contentDescription="@string/avatar"
+            android:src="@drawable/default_avatar" />
 
 	    <TextView
 	        android:id="@+id/reviewerTextView"
