--- a/res/layout/list_profile.xml
+++ b/res/layout/list_profile.xml
@@ -11,7 +11,8 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:scaleType="fitXY"
-        android:contentDescription="@string/avatar" />
+        android:contentDescription="@string/avatar"
+        android:src="@drawable/default_avatar" />
 
     <LinearLayout
         android:layout_width="wrap_content"
