--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,9 +3,11 @@
     
     <color name="list_background">#fff4f4f5</color>
     <!-- <color name="list_background">#ffff0000</color> -->
-    <color name="list_item_selected">#ffff95c0</color>
+    <color name="list_item_selected">#fffbe2e3</color>
     <color name="list_item_not_selected">#00000000</color>
     <color name="list_item_approved">#ff3cb798</color>
     <color name="list_item_prove_ahead">#ffff575b</color>
+    <color name="tab_item_selected">#ffff575b</color>
+    <color name="tab_item_not_selected">#ff61686d</color>
         
 </resources>
