--- a/res/layout/report_mine.xml
+++ b/res/layout/report_mine.xml
@@ -5,20 +5,11 @@
     android:orientation="vertical"
     android:background="@color/list_background" >
 
-    <classes.XListView
+    <classes.Widget.XListView
         android:id="@+id/mineListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:cacheColorHint="#00000000"  >
-    </classes.XListView>
-
-    <Button
-        android:id="@+id/addButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="75dp"
-        android:background="@drawable/add_button" />
+    </classes.Widget.XListView>
 
 </RelativeLayout>
