--- a/res/layout/fragment_statistics.xml
+++ b/res/layout/fragment_statistics.xml
@@ -15,7 +15,7 @@
         android:orientation="horizontal" >
 
         <LinearLayout
-            android:id="@+id/new_container"
+            android:id="@+id/newPieContainer"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="3"
@@ -24,7 +24,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/process_container"
+            android:id="@+id/processPieContainer"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="2"
@@ -33,7 +33,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/done_container"
+            android:id="@+id/donePieContainer"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="3"
@@ -50,7 +50,7 @@
         android:layout_weight="3" >
         
          <LinearLayout
-            android:id="@+id/month_charts"
+            android:id="@+id/monthBarContainer"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center"
