--- a/res/layout/list_profile.xml
+++ b/res/layout/list_profile.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:reim="http://schemas.android.com/apk/res/com.rushucloud.reim"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:padding="10dp"
-    android:background="@drawable/list_item_color" >
+    android:background="@drawable/list_item_drawable" >
 
-    <ImageView
+    <classes.Widget.CircleImageView
         android:id="@+id/imageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:scaleType="fitXY"
         android:contentDescription="@string/avatar"
-        android:src="@drawable/default_avatar" />
+        android:src="@drawable/default_avatar"
+        reim:border_width="0dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
