--- a/res/layout/start_sign_in.xml
+++ b/res/layout/start_sign_in.xml
@@ -3,6 +3,7 @@
     android:id="@+id/baseLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/start_background"
     android:orientation="vertical" >
 
     <EditText
@@ -15,7 +16,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:hint="@string/inputUsername"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColorHint="@color/hint_white" />
 
     <requestFocus />
 
