--- a/res/layout/start_welcome.xml
+++ b/res/layout/start_welcome.xml
@@ -5,29 +5,47 @@
     android:orientation="vertical" >
 
     <ImageView
-        android:id="@+id/welcomeImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:contentDescription="@string/background"
         android:scaleType="fitXY"
-        android:src="@drawable/welcome" />
+        android:src="@drawable/start_background" />
 
-    <Button
-        android:id="@+id/signInButton"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/signUpButton"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="36dp"
-        android:text="@string/signIn" />
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="72dp"
+        android:contentDescription="@string/nullString"
+        android:src="@drawable/start_icon" />
 
     <Button
         android:id="@+id/signUpButton"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/signInButton"
         android:layout_centerHorizontal="true"
-        android:text="@string/signUp" />
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"        
+        android:background="@drawable/button_long_dark"
+        android:text="@string/signUp"
+        android:textColor="@color/major_dark"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/signInButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="36dp"
+        android:background="@drawable/button_long_light"
+        android:text="@string/signIn"
+        android:textColor="@color/major_light"
+        android:textSize="20sp" />
 
 </RelativeLayout>
