--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -16,5 +16,10 @@
         <attr name="text_color_selected" />
         <attr name="text_color_not_selected" />
     </declare-styleable>
+    
+    <declare-styleable name="CircleImageView">
+        <attr name="border_width" format="dimension" />
+        <attr name="border_color" format="color" />
+    </declare-styleable>
 
 </resources>
